--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -1,1 +1,32 @@
+name: Development branch build and scan
 
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+
+jobs:
+  build_projects:
+    name: Release build and tests
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Set script permissions
+        run: chmod +x ./build-all.sh
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18'
+      - name: Build projects
+        run: ./build-all.sh
+      - name: Upload coverage reports
+        run: actions/upload-artifact@v2
+        with:
+          name: coverage-reports
+          path: |
+            **/coverage/*
+            !**/node_modules/**
