--- a/.github/workflows/build-development.yml
+++ b/.github/workflows/build-development.yml
@@ -2,27 +2,27 @@ name: Development branch build and scan
 
 on:
   pull_request:
-    branches: [development]
+    branches: [ development ]
     types: [opened, synchronize, reopened]
-  workflow_dispatch:
+  workflow_dispatch:    
 
 jobs:
   build_projects:
     name: Release build and tests
     runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout Code
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v2
       - name: Set script permissions
-        run: chmod +x ./build-all.sh
+        run: chmod +x ./build-all.sh     
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '18'
       - name: Build projects
-        run: ./build-all.sh
+        run: ./build-all.sh 
       - name: Upload coverage reports
-        run: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: coverage-reports
           path: |
